test/message/stack_overflow.chakracore.out
before
*test*message*stack_overflow.js:*
  stackOverflow();
  ^

Error: Out of stack space
